  overlapping troop bugs. (revvy)
+ Animation speed on the main adventure screen can now be controlled from the
  settings panel in game. (afletdinov)
+ Added animations for previously static objects (stone liths, treasure chests,
  fountains). (afletdinov)
+ Added rudimentary AI for castle building, recruiting troops and controlling
  heroes. (afletdinov)
+ Stopped end turn confirmation dialog from appearing when all heroes cannot
  move any further along their paths, but still have movement points
  remaining. (revvy)
+ Added music to Barbarian castle. (afletdinov)
+ Tiles surrounding a monster on the adventure screen now show the battle
  mouse cursor. (afletdinov)
+ Battle summary screen no longer misses some captured artifacts. (revvy)
+ Added ultimate artifact puzzle interface. (revvy, afletdinov)
+ Fixed a bug preventing remaining HP information from showing up in the monster
  info window in battle. (revvy)
+ Fixed recurring problem in battles where AI units would walk next to a unit
  but not attack. (revvy)
+ Fixed bug causing marketplace dialog to close after every trade. (revvy)
+ Fixed various problems with dialogs being slightly transparent and very ugly.
  (afletdinov, revvy)
+ Fixed bug causing experience award display on battle summary screen to
  always show 0. (revvy)
+ Tiles surrounding monsters on the adventure screen now display the proper
  fight cursor. (afletdinov)
+ All major dialogs should respond like HoMM II to ESC and RET key presses.
  (afletdinov)
+ Message boxes now display the title in proper yellow letters. (afletdinov)
+ Many more bug fixes.

Developers

+ Army::Troops has been split into Army::Troop (for storing monster type, total
  number, and primary skill) and Army::BattleTroop, which holds information
  about animation, hit points, and position. (revvy)
+ Fixed a couple endian issues, so fheroes2 should theoretically work perfectly
  on MacOS (revvy, afletdinov)

November 20, 2008 - Development build r571

+ Everything!